<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
